--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<section class="panel color1">
 								<div class="intro joined">
 									<h2 class="major">Cuts,&nbsp;<br />Consulting,&nbsp;<br />and Colour.</h2>
-									<p>Kenneth has educated for such brands as Davines, Affinage, J Beverly Hills, and most recently Jack Winn Color Specialist.</p>
+									<p>Kenneth does it all, from start to finish. Check out the <a href="https://www.styleseat.com/m/book/v/kennethfielding" target="_blank">booking page</a> to see a full service list.</p>
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
@@ -77,7 +77,7 @@
 							<section class="panel">
 								<div class="intro color2">
 									<h2 class="major">Examples:</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>Take a look at the latest styles. Keep up to date by following Kenneth Fielding Colour Maestro on <a href="https://www.instagram.com/colourmaestro/" target="_blank">Instagram</a> and <a href="https://www.facebook.com/KennethFielding.Hair/" target="_blank">Facebook</a> for frequent updates.</p>
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
@@ -99,9 +99,9 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium left" id="first">
 								<div class="content span-7">
-									<h2 class="major">Use the Right Brands:</h2>
+									<h2 class="major">Always on a Quest for the Best:</h2>
 									<p>
-										Kenneth has educated for such brands as Davines, Affinage, J Beverly Hills, and most recently Jack Winn Color Specialist.
+										Kenneth's committment to staying current on the most up to date technology in hair color and styling products is steadfast. He is always on the hunt for the latest and greatest. "Most well known major brands of haircolor have not updated their formulation technology in at least 25 years. There have been major gains in hair and skin care technology, getting your hair colored doesn't have to cause discomfort by irritating your scalp to the point of itching and burning. 
 									  <!--(Photography: Janice Chechhio) -->
 									</p>
 								</div>
@@ -115,7 +115,7 @@
 								<div class="content span-7">
 									<h2 class="major">Use the Right Brands:</h2>
 									<p>
-										Kenneth has educated for such brands as Davines, Affinage, J Beverly Hills, and most recently Jack Winn Color Specialist.
+										My latest find is Jack Winn Color, this unique artisanal line uses the finest botanical ingredients including aloe vera to soothe and protect the scalp and argan oil to heal and strengthen the hair. I'm super excited to be joining the JWC family for their first Educator Summit this fall." Kenneth has also educated for Davines and most recently Affinage. 
 									  <!--(Photography: Janice Chechhio) -->
 									</p>
 								</div>
@@ -129,7 +129,7 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Contact</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>Get in touch with Kenneth Fielding if you have any questions about methods or process. If you're booking an appointment, use the button in the top right to go to the booking form.</p>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
